--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -12,10 +12,7 @@ serde = { version = "1", features = ["rc"] }
 serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde_derive = "1"
 stacks-codec = "2.4.1"
-clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch = "feat/clarity-wasm-develop", package = "clarity", default-features = false, features = [
-    "canonical",
-    "log",
-] }
+clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch = "feat/clarity-wasm-develop", package = "clarity", default-features = false, features = ["log"] }
 hiro-system-kit = { version = "0.3.4", optional = true }
 rocket = { version = "=0.5.0", features = ["json"] }
 bitcoincore-rpc = "0.18.0"
